--- a/BolsaDeValores/res/values/strings.xml
+++ b/BolsaDeValores/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_feed">Feed</string>
     <string name="title_activity_search_stock">Results</string>
     <string name="title_activity_details">Details</string>
+    <string name="title_activity_currency">Currencies</string>
 
 </resources>
