--- a/BolsaDeValores/res/values/strings.xml
+++ b/BolsaDeValores/res/values/strings.xml
@@ -2,10 +2,16 @@
 <resources>
 
     <string name="app_name">Stocks</string>
+    
     <string name="action_settings">Settings</string>
+    
     <string name="title_activity_feed">Feed</string>
     <string name="title_activity_search_stock">Results</string>
     <string name="title_activity_details">Details</string>
     <string name="title_activity_currency">Currencies</string>
+    
+    <string name="menu_search">Search</string>
+    <string name="menu_feeds">Feeds</string>
+    <string name="menu_currency">Currency</string>
 
 </resources>
