--- a/BolsaDeValores/res/values/strings.xml
+++ b/BolsaDeValores/res/values/strings.xml
@@ -5,6 +5,8 @@
     
     <string name="action_settings">Settings</string>
     
+    <string name="error_dialog_refresh">Refresh</string>
+    
     <string name="title_activity_feed">Feed</string>
     <string name="title_activity_search_stock">Results</string>
     <string name="title_activity_details">Details</string>
