--- a/BolsaDeValores/res/values/strings.xml
+++ b/BolsaDeValores/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_search">Search</string>
     <string name="menu_feeds">Feeds</string>
     <string name="menu_currency">Currency</string>
+    <string name="menu_currency_search">Currency search</string>
     
     <string name="context_stock_delete">Delete</string>
 
