--- a/BolsaDeValores/res/values/strings.xml
+++ b/BolsaDeValores/res/values/strings.xml
@@ -7,10 +7,10 @@
     
     <string name="error_dialog_refresh">Refresh</string>
     
-    <string name="title_activity_feed">Feed</string>
+    <string name="title_activity_feed">Feeds</string>
     <string name="title_activity_search_stock">Results</string>
     <string name="title_activity_details">Details</string>
-    <string name="title_activity_currency">Currencies</string>
+    <string name="title_activity_market">Market</string>
     
     <string name="menu_search">Search</string>
     <string name="menu_feeds">Feeds</string>
